Lower bytecode target to Java 11 for Maven <= 3.8.x compatibility
The extension was completely invisible to Maven 3.8.3 - not a coexistence
issue, standalone use was silently broken too, with zero errors anywhere.
Root-caused by hand with a minimal test extension: Maven <= 3.8.x bundles
a much older Eclipse Sisu whose embedded ASM fork cannot parse class files
compiled for Java 15+, and silently skips discovering any such @Named
component during core-extension scanning. Verified the exact boundary:
class file version 58 (Java 14) is discovered fine, 59 (Java 15) is not.

Since this project is itself a core extension - loaded by whatever Maven
version a user's project happens to run, not anything this build controls
- drop the compiled target from 17 to 11, replacing the two Java 16+
constructs in use (pattern-matching instanceof, text blocks) and the
Java 16+ Stream.toList() calls with their pre-15 equivalents. The build
JDK is unaffected (still 17+); only the compiled bytecode version changes.

Verified against Maven 3.8.3 standalone, and combined with
maven-git-versioning-extension 7.3.0 (clean success) and 9.12.0 (still
hits that extension's own unrelated "Collections sizes are not equals"
bug, confirmed independent of Maven version).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>